Fix the alignment of the navbar elements

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -60,7 +60,7 @@ nav{
     .menu {
         flex-direction: column;
         align-items: center;
-        justify-content: cfenter;
+        justify-content: center !important;
         width: 80%;
         height: 100vh;
         position: fixed;
